--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "voice-bot-ui",
-  "homepage": "http://gottijspy.github.io/voice-bot-ui",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,6 +8,9 @@
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "artyom.js": "^1.0.6",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "express-generator": "^4.16.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.4.0"
@@ -37,6 +39,8 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^2.2.0"
+    "gh-pages": "^2.2.0",
+    "webpack": "^4.41.6",
+    "webpack-cli": "^3.3.11"
   }
 }
