--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "express-generator": "^4.16.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.4.0"
+    "react-scripts": "3.4.0",
+    "webpack": "^4.41.6"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -40,7 +41,6 @@
   },
   "devDependencies": {
     "gh-pages": "^2.2.0",
-    "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11"
   }
 }
